--- a/output/web/sec-leg-visualize.html
+++ b/output/web/sec-leg-visualize.html
@@ -504,8 +504,14 @@ sagecell.makeSagecell({inputLocation: 'pre.sagecell-r',
 <div class="para" id="p-564">We now summarize the relationships of the type of bill to its status to determine whether specific types of bills were more likely to succeed.</div>
 <div class="para" id="p-565">Note that <dfn class="terminology">crossing over</dfn> refers to a bill being passed out of one state legislative chamber (either the State House or State Senate) and moving forward for consideration in the other chamber. Thus, a bill that has crossed over suggests majority support for the bill in at least one chamber.</div>
 <pre class="ptx-sagecell sagecell-r" id="sage-1"><script type="text/x-sage">bills_18_20 = read.csv("https://github.com/Zibiana/QR4SJ/raw/main/assets/data/bills_2018-2020.csv")
-col_types = c("date", "text", "text", 
-	"text", "text", "text", "numeric"))
+bills_2021 = read_csv("https://github.com/Zibiana/QR4SJ/raw/main/assets/data/2021 Anti-Trans Bills _ Track Trans Legislation.csv")
+bills_2022 = read_csv("https://github.com/Zibiana/QR4SJ/raw/main/assets/data/2022 Anti-Trans Bills _ Track Trans Legislation.csv")
+bills_2023 = read_csv("https://github.com/Zibiana/QR4SJ/raw/main/assets/data/2023 Anti-Trans Bills _ Track Trans Legislation.csv")
+bills_2021$year = format(bills_2021$Date, "%Y")
+bills_2022$year = format(bills_2022$Date, "%Y")
+bills_2023$year = format(bills_2023$Date, "%Y")
+bills_18_20$year = format(bills_18_20$Date, "%Y")
+bills_21_23 = rbind(bills_2021, bills_2022, bills_2023)
 </script></pre>
 <pre class="code-block tex2jax_ignore">##                      Bill Type Crossed Over Dead/Failed Introduced Passed
 ##               Drag Performance            6          11         19      0
