--- a/output/web/knowl/li-267.html
+++ b/output/web/knowl/li-267.html
@@ -10,6 +10,9 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="robots" content="noindex, nofollow">
 </head>
-<body class="ignore-math"> About how many bills were passed in the year 2021? <span class="incontext"><a href="sec-leg-visualize.html#li-267" class="internal">in-context</a></span>
+<body class="ignore-math">
+<article class="li"><h5 class="heading">
+<span class="type">Item</span><span class="period">.</span>
+</h5>About how many bills were passed in the year 2021?</article><span class="incontext"><a href="sec-leg-visualize.html#li-267" class="internal">in-context</a></span>
 </body>
 </html>
